static/css/myapp.css
/*** basic styles ***/
html {box-sizing:border-box;}
*, *:after, *:before {border:0; margin:0; padding:0; box-sizing:inherit;}
html, body {max-width: 100vw; overflow-x: hidden}

.colorful {
    color: #bb8833;
}

.roundedCorners {
    border-radius: 2px;
    border: 2px solid #000;
    background: rgba(0, 0, 0, 0.4);
    
    width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    
    position: relative;
}

.noBottomMargin {
    margin-bottom: 0px !important;
}

#topRightTest {
    position: absolute;
    top: 1px;
    right: 2px;
    padding: 2px;
}

.topButtons {
    margin: 8px;
    margin-top: 0px;
    margin-bottom: 0px;
    width: 100%;
}

.noDecoration {
    text-decoration: none;
    color: black;
}

.jobCard {
    cursor: pointer;
}

.noDecoration:hover {
    color: rgba(0, 0, 0, 0.25) !important;
}

.spaced {
    margin-left: 20px;
    margin-right: 20px;
}

.topButtonIcons {
    border-radius: 4px;
    border: 2px solid #000;
    background-color: grey;
    margin-bottom: -2px;
    display: inline-block;
    color: white;
}


/*
    https://stackoverflow.com/questions/1120879/css-checkbox-input-styling
*/

input[type=checkbox].checkBox {
    cursor: pointer;
}
input[type=checkbox].checkBox:before {
     content: "";
     display: block;
     position: absolute;
     width: 12px;
     height: 12px;
     top: 0;
     left: 0;
     border: 1px solid #555555;
     border-radius: 3px;
     background-color: white;
}
input[type=checkbox].checkBox:checked:after {
    content: "";
    display: block;
    width: 4px;
    height: 10px;
    border: solid black;
    border-width: 0 2px 2px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
    position: absolute;
    top: -1px;
    left: 5px;
}

.closeJobDetails {
    padding-top: 4px;
    padding-right: 8px;
}

.closePlayerModels {
    padding-top: 4px;
    padding-right: 0px;
}

.playerModel {
    width: 100%;
    background: #e2e2e2;
    border-radius: 4px;
    margin-bottom: 30px;
}

.playerModel:hover {
    cursor: pointer;
    background: lightgreen;
}

.editJobDetails {
    padding-top: 7px;
    padding-right: 16px;
}
.editJobDetails:hover {
    opacity: 0.7;
}

.deleteJobDetails {
    padding-top: 7px;
    padding-right: 20px;
}
.deleteJobDetails:hover {
    opacity: 0.7;
}

.pointer {
    cursor: pointer;
}

.red {
    color: rgba(136, 0, 0, 1);
}

.blue {
    color: rgba(70, 130, 180, 1);
}

.cPanel {
    padding: 15px;
    background-color: white;  
}

.filterByTags {
    background-color: rgba(247, 247, 249, 1);
    color: rgba(152, 151, 139, 1);
    font-size: 12px;
    padding: 10px 15px 10px 15px;
    
    cursor: pointer;
}

#filterText:hover {
    text-decoration: underline;
}

#filterTags {
    background-color: white;
}

.roundedCorners2 {
    border-radius: 4px;
    border: 2px solid #000;
    background: rgba(0, 0, 0, 0.4);
    margin: 8px;
    margin-top: 0px;
    width: 100%;
}

.roundedCorners3 {
    background: rgba(0, 0, 0, 0.4);
    margin: 8px;
    margin-top: 0px;
    width: 100%;
}

.createJobButton {
    background-color: rgba(33, 33, 33, 0.75);
    color: white;
}

a.first::after {
  content:'...'
}

a.last::before {
  content:'...'
}

.noSelect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}

.submitWrapper {
    white-space: nowrap;
}

.whiteGloss {
    width: 100%;
    border-radius: 0px;
    padding: 12px 2px 12px 2px;
    
    overflow: hidden;
}

.jobHeaderImg {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}



.header {
    display: inline-block; 
    width: 100%;
    margin-top: 10px;
}

.postedBy {
    background-color: rgba(33, 33, 33, 0.9);
    width: 100%;
    text-align: right;
}

.postedByText {
    font-size: 14px;
    padding: 2px 8px 2px 8px;
    color: white;
    
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.textColorWhite {
    color: #FFF;
}

.textColorBlack {
    color: #141414;
}

.textColorWhiteFaded {
    color: rgb(255, 255, 255, 0.95);
}

.textColorBlackFaded {
    color: rgb(20, 20, 20, 0.95);
}


.myTextBottomLeft {
    padding-left: 12px;
    padding-right: 12px;
    font-size: 48px;
    font-weight: bold;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.tableData {
    vertical-align: bottom;
    color: rgba(0, 0, 0, 0.75);
}

.jobDetailsTextBottomLeft {
    font-size: 48px;
    line-height: 72px;
    font-weight: bold;
    word-break: break-all;
}

.clear {
    clear: both;
}

.playerModelLink {
    color: #007bff;
    text-decoration: none;
    background-color: transparent;
}

.playerModelLink:hover {
    text-decoration: underline;
    cursor: pointer;
}

.playerModelLinkEdit {
    color: #000;
    text-decoration: none;
    font-weight: bold;
    background-color: transparent;
}

.playerModelLinkEdit:hover {
    text-decoration: underline;
    cursor: pointer;
}

.jobDescription {
    font-size: 18px;
    font-weight: bold;
    margin: 6.4px 10px 6.4px 10px; /* Calculated by hand */
    color: rgba(0, 0, 0, 0.75);
    word-wrap: break-word;
    
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    
    overflow: hidden;
    text-overflow: ellipsis;
    
    height: 2.8em;
    line-height: 1.4em;
}

.jobDescription2 {
    font-size: 18px;
    font-weight: bold;
    padding: 8px;
    color: rgba(0, 0, 0, 0.75);
    word-wrap: break-word;
    line-height: 2em;
}

.formError {
    color: #b70000;
    margin-top: 10px;
    font-size: 18px;
    font-weight: bold;
}

.comment {
    margin: 0px 0px 0px 0px;
    padding: 5px 20px 5px 20px;
    background-color: white;
}

.comment_top {
    background-color: rgba(33, 33, 33, 0.1);
    padding: 10px;
    font-size: 12px;
}

.comment_text {
    padding: 10px;
    word-wrap: break-word;
}

.commentError {
    color: #b70000;
    padding: 5px;
}

.loadMore {
    color: white;
    background-color: #383838;
    width: 100%;
    padding: 10px;
}

/*** grid ***/
.containerS {margin-right:-20px}
.containerS>.quarter, .containerS>.half, .containerS>.third, .containerS>.twothirds, .containerS>.threequarters, .containerS>.sixty, .containerS>.fourty {display:inline-block; padding: 0 20px 0 0; vertical-align:top}
.containerS>.fill{display: inline-block; padding-right: 20px; margin-right:-10px}
.containerS img, .containerS video {max-width:100%}
.max900 {margin-left:auto; margin-right:auto}

@media all and (min-width:800px) {
  .max900 {max-width:900px}
  .quarter {width:25%; margin-right:-5px}
  .half {width:50%; margin-right:-10px}
  .sixty {width: 90%; margin-right:-10px}
  .fourty {width: 10%; margin-right:-10px}
  .third {width:33.33%; margin-right:-6.66px}
  .twothirds {width:66.66%; margin-right:-13.33px}
  .threequarters {width:75%; margin-right:-15px}
}
@media all and (min-width:600px) and (max-width:799px) {
  .quarter.compressible {width:25%; margin-right:-5px}
  .half.compressible {width:50%; margin-right:-10px}
  .fourty.compressible {width:10%; margin-right:-10px}
  .sixty.compressible {width:90%; margin-right:-10px}
  .threequarters.compressible {width:75%; margin-right:-15px}
  .quarter:not(.compressible), .half:not(.compressible), .threequarters:not(.compressible) {width:100%; margin-right:-20px}
  .third {width:33.33%; margin-right:-6.66px}
  .twothirds {width:66.66%; margin-right:-13.33px}
  label.quarter:not(.compressible).right, label.half:not(.compressible).right, 
  label.fourty:not(.compressible).right,label.sixty:not(.compressible).right,label.threequarters:not(.compressible).right   {float:left; text-align:left}
}
@media all and (max-width:599px) {  
  .quarter:not(.compressible), .half:not(.compressible), .fourty:not(.compressible), .sixty:not(.compressible), .third:not(.compressible), .twothirds:not(.compressible), .threequarters:not(.compressible) {width:100%;}
  label.quarter:not(.compressible).right, label.half:not(.compressible).right, label.sixty:not(.compressible).right, label.fourty:not(.compressible).right, label.threequarters:not(.compressible).right,
  label.third:not(.compressible).right, label.twothirds:not(.compressible).right   {float:left; text-align:left}
  .quarter.compressible {width:25%; margin-right:-5px}
  .half.compressible {width:50%; margin-right:-10px}
  .fourty.compressible {width:10%; margin-right:-10px}
  .sixty.compressible {width:90%; margin-right:-10px}
  .third.compressible {width:33.33%; margin-right:-6.66px}
  .twothirds.compressible {width:66.66%; margin-right:-13.33px}
  .threequarters.compressible {width:75%; margin-right:-15px}
}

.submitButton {
    padding: 5px 15px;
    background: #ccc;
    border: 0 none;
    cursor: pointer;
    -webkit-border-radius: 5px;
    border-radius: 5px;
}

.editButtons {
    padding: 5px 15px;
    background: #ffffff;
    border-radius: 4px;
    border: 1px solid #2a2a2a; 
}


.roundedTop {
    border-top-right-radius: 2px;
    border-top-left-radius: 2px;
}

.rounded {
    border-radius: 2px;
    border: 2px solid #000;
}

table {
    
}

tr {
    
}

td {
    width: auto;
}

td.min {
    width: 1%;
    white-space: nowrap;
    font-weight: bold;
}


/** Tabs **/



/* Style the tab */
.tab {
    overflow: hidden;
    background-color: #202020;
    margin-left: 4px;
}

/* Style the buttons inside the tab */
.tab div {
    background-color: inherit;
    float: left;
    border: none;
    outline: none;
    outline-width: 0;
    cursor: pointer;
    padding: 14px 16px;
    transition: 0.3s;
    font-size: 17px;
    color: rgba(133, 133, 133, 1);
}

/* Change background color of buttons on hover */
.tab div:hover {
    background-color: #202020;
    color: white;
}

/* Create an active/current tablink class */
.tab div.active {
    background-color: #202020;
    color: white;
}

/* Style the tab content */
.tabcontent {
    display: none;
    padding: 6px 12px;
    border-top: none;
}

